# gvecdb-ocaml

./: .gitignore  .gitmodules  README.md  dune-project  dune-workspace  gvecdb.opam
.github/workflows/: ci.yml
lib/: bigstring_message.ml  bigstring_storage.ml  common.ml  dune  float32_vec.ml  float32_vec.mli  gvecdb.ml  gvecdb.mli  keys.ml  knn.ml  msync.ml  msync_stubs.c  props_capnp.ml  props_capnp.mli  store.ml  topk.ml  topk.mli  types.ml  types.mli  vector_file.ml
reports/: 07-11-25.md  12-11-25.md  12-12-25.md  19-11-25.md  2025-11-12.md  2025-11-19.md  2025-11-27.md  2025-11-28.md  2025-12-10.md  2025-12-19.md  2026-01-09.md
test/: dune  test_adjacency.ml  test_basic.ml  test_common.ml  test_gvecdb.ml  test_keys.ml  test_transactions.ml  test_vectors.ml  test_zerocopy.ml
test_schemas/: dune
